--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,24 +119,72 @@
           </div>
           <div class="botm">
             <div class="pic">
-              <div id="picimg5" class="picimgAll">
-                <img src="/img/index/maplestory.jpg" alt="" />
-              </div>
-              <div id="picimg4" class="picimgAll">
-                <img src="/img/index/maplestory.jpg" alt="" />
-              </div>
-              <div id="picimg3" class="picimgAll">
-                <img src="/img/index/maplestory.jpg" alt="" />
-              </div>
-              <div id="picimg2" class="picimgAll">
-                <img src="/img/index/maplestory.jpg" alt="" />
-              </div>
               <div id="picimg1" class="picimgAll">
                 <img src="/img/index/maplestory.jpg" alt="" />
               </div>
+              <div id="picimg2" class="picimgAll">
+                <img src="/img/index/maplestory2.jpg" alt="" />
+              </div>
+              <div id="picimg3" class="picimgAll">
+                <img src="/img/index/maplestory3.jpg" alt="" />
+              </div>
+              <div id="picimg4" class="picimgAll">
+                <img src="/img/index/maplestory2.jpg" alt="" />
+              </div>
+              <div id="picimg5" class="picimgAll">
+                <img src="/img/index/maplestory.jpg" alt="" />
+              </div>
             </div>
-            <div class="text">
+            <div id="text1" class="text">
               <h1>《極地戰壕3》</h1>
+              <p>
+                進入血脈賁張的現代游擊革命世界。探索令人嘆為觀止的景觀、直覺式的槍戰、多元的遊戲體驗與更多精彩內容——現在正是加入戰鬥的最好時機。
+              </p>
+              <p>
+                免費試玩《極地戰嚎 6》，親自體驗為何《GAME
+                INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
+              </p>
+              <a href=""><i class="bi bi-shop"></i></a>
+              <a href=""><i class="bi bi-cart3"></i></a>
+            </div>
+            <div id="text2" class="text">
+              <h1>《新楓之谷》</h1>
+              <p>
+                進入血脈賁張的現代游擊革命世界。探索令人嘆為觀止的景觀、直覺式的槍戰、多元的遊戲體驗與更多精彩內容——現在正是加入戰鬥的最好時機。
+              </p>
+              <p>
+                免費試玩《極地戰嚎 6》，親自體驗為何《GAME
+                INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
+              </p>
+              <a href=""><i class="bi bi-shop"></i></a>
+              <a href=""><i class="bi bi-cart3"></i></a>
+            </div>
+            <div id="text3" class="text">
+              <h1>《PUBG》</h1>
+              <p>
+                進入血脈賁張的現代游擊革命世界。探索令人嘆為觀止的景觀、直覺式的槍戰、多元的遊戲體驗與更多精彩內容——現在正是加入戰鬥的最好時機。
+              </p>
+              <p>
+                免費試玩《極地戰嚎 6》，親自體驗為何《GAME
+                INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
+              </p>
+              <a href=""><i class="bi bi-shop"></i></a>
+              <a href=""><i class="bi bi-cart3"></i></a>
+            </div>
+            <div id="text4" class="text">
+              <h1>《糖豆人》</h1>
+              <p>
+                進入血脈賁張的現代游擊革命世界。探索令人嘆為觀止的景觀、直覺式的槍戰、多元的遊戲體驗與更多精彩內容——現在正是加入戰鬥的最好時機。
+              </p>
+              <p>
+                免費試玩《極地戰嚎 6》，親自體驗為何《GAME
+                INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
+              </p>
+              <a href=""><i class="bi bi-shop"></i></a>
+              <a href=""><i class="bi bi-cart3"></i></a>
+            </div>
+            <div id="text5" class="text">
+              <h1>《世紀帝國》</h1>
               <p>
                 進入血脈賁張的現代游擊革命世界。探索令人嘆為觀止的景觀、直覺式的槍戰、多元的遊戲體驗與更多精彩內容——現在正是加入戰鬥的最好時機。
               </p>
@@ -262,7 +310,7 @@
 
             <div class="renewindex mg-top">
               <div class="renewpic">
-                <img src="/img/index/楓之谷.jpg" alt="" />
+                <img src="/img/index/PUBG.jpg" alt="" />
               </div>
               <div class="renewtext">
                 <h2>13.7版本更新公告</h2>
@@ -310,7 +358,7 @@
 
             <div class="renewindex mg-top">
               <div class="renewpic">
-                <img src="/img/index/楓之谷.jpg" alt="" />
+                <img src="/img/index/PUBG.jpg" alt="" />
               </div>
               <div class="renewtext">
                 <h2>13.7版本更新公告</h2>
@@ -340,7 +388,7 @@
             </div>
           </div>
           <div class="productAll" id="productAll">
-            <img src="/img/index/射擊.png" alt="" />
+            <img src="/img/index/PUBGpeople.png" alt="" />
           </div>
         </div>
 
