輪播圖要改

--- a/theGameC/views/index.ejs
+++ b/theGameC/views/index.ejs
@@ -123,16 +123,16 @@
                 <img src="/img/index/maplestory.jpg" alt="" />
               </div>
               <div id="picimg2" class="picimgAll">
-                <img src="/img/index/maplestory2.jpg" alt="" />
+                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
               </div>
               <div id="picimg3" class="picimgAll">
-                <img src="/img/index/maplestory3.jpg" alt="" />
+                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
               </div>
               <div id="picimg4" class="picimgAll">
-                <img src="/img/index/maplestory2.jpg" alt="" />
+                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
               </div>
               <div id="picimg5" class="picimgAll">
-                <img src="/img/index/maplestory.jpg" alt="" />
+                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
               </div>
             </div>
             <div id="text1" class="text">
