--- a/theGameC/public/kits/slick/slick/slick-theme.css
+++ b/theGameC/public/kits/slick/slick/slick-theme.css
@@ -19,6 +19,7 @@
   display: block;
   height: 20px;
   width: 20px;
+  background-color: aqua;
   line-height: 0px;
   font-size: 0px;
   cursor: pointer;
@@ -58,11 +59,11 @@
 }
 
 .slick-prev {
-  left: -25px;
+  left: 45px;
 }
 [dir=rtl] .slick-prev {
   left: auto;
-  right: -25px;
+  right: 50px;
 }
 .slick-prev:before {
   content: "←";
@@ -72,10 +73,10 @@
 }
 
 .slick-next {
-  right: -25px;
+  right: 57px;
 }
 [dir=rtl] .slick-next {
-  left: -25px;
+  left: 46px;
   right: auto;
 }
 .slick-next:before {
