--- a/theGameC/public/kits/slick/slick/slick-theme.css
+++ b/theGameC/public/kits/slick/slick/slick-theme.css
@@ -17,15 +17,15 @@
 .slick-next {
   position: absolute;
   display: block;
-  height: 20px;
+  height: 150px;
   width: 20px;
   background-color: aqua;
   line-height: 0px;
   font-size: 0px;
   cursor: pointer;
   background: transparent;
-  color: transparent;
-  top: 50%;
+  /* color: transparent; */
+  top: 39%;
   transform: translate(0, -50%);
   padding: 0;
   border: none;
@@ -60,6 +60,7 @@
 
 .slick-prev {
   left: 45px;
+  z-index: 1;
 }
 [dir=rtl] .slick-prev {
   left: auto;
@@ -73,7 +74,7 @@
 }
 
 .slick-next {
-  right: 57px;
+  right: 56px;
 }
 [dir=rtl] .slick-next {
   left: 46px;
