--- a/theGameC/public/style/index.css
+++ b/theGameC/public/style/index.css
@@ -16,7 +16,7 @@ body {
   text-align: center;
 }
 
-.carousel > h1 {
+.carousel>h1 {
   padding: 2rem 0px;
   letter-spacing: 0.4rem;
   color: white;
@@ -92,7 +92,7 @@ body {
 .d1 {
   /* width: 100%; */
   height: 100vh;
-  /* background-color: antiquewhite; */
+  background-color: antiquewhite;
   background-image: url(../img/index/graywaveBg.jpg);
   background-position: center;
   background-size: cover;
@@ -101,7 +101,7 @@ body {
 
 .title h1 {
   position: relative;
-  top: 140px;
+  top: 170px;
   padding-left: 10%;
   margin-top: 0px;
 }
@@ -112,7 +112,7 @@ body {
   /* background-color: aqua; */
   position: relative;
   left: 10%;
-  top: 16%;
+  top: 22%;
 }
 
 .pic {
@@ -122,92 +122,86 @@ body {
   height: 60vh;
   position: relative;
   /* height: 100px; */
+  padding: 0px 3%;
 }
 
-.picimgAll {
+.splide__slide {
+  opacity: 0.6;
+}
+
+video {
+  position: absolute;
+  z-index: -1;
+}
+
+.alpha {
+  /* background-color: #0071db; */
+  z-index: -1;
   position: absolute;
 }
 
-#picimg1{
-  position: absolute;
-  left: 0%;
-  width: 55%;
-  /* height: 500px; */
-  z-index: 10;
-  transition:.5s;
-}
- #picimg1 > img {
-  width: 100%;
-  cursor: pointer;
-} 
-#picimg2{
-  /* cursor: pointer; */
-  width: 55%;
-  position: absolute;
-  left: 11%;
-  top: 3vh;
-  z-index: 9;
-  transition:.5s;
-}
-#picimg2>img{
-  cursor: pointer;
-  width: 100%;
-}
-#picimg3{
-  width: 55%;
-  z-index: 8;
-  position: absolute;
-  left: 22%;
-  top: 6vh;
-  transition: .5s;
-}
-#picimg3>img{
-  cursor: pointer;
-  width: 100%;
+.splide__slide.is-active {
+  opacity: 1;
 }
 
-#picimg4{
-  width: 55%;
-  z-index: 7;
-  position: absolute;
-  left: 32%;
-  top: 9vh;
-  transition: .5s;
+/* 更改下方選取時的框 */
+.splide__track--nav>.splide__list>.splide__slide.is-active {
+  border: 5px solid #0057a8 !important;
 }
-#picimg4>img{
-  cursor: pointer;
+
+.splide__slide img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-#picimg5{
-  width: 55%;
-  z-index: 6;
-  position: absolute;
-  left: 42%;
-  top: 12vh;
-  transition: .5s;
+
+/* 修改下方的形狀變成圓形 */
+.border {
+  width: 100px !important;
+  height: 100px !important;
+  border-radius: 50px;
+  overflow: hidden;
+  margin-right: 8% !important;
 }
-#picimg5>img{
-  cursor: pointer;
-  width: 100%;
+
+#thumbnail-carousel {
+  margin-top: 3%;
+  padding-left: 5% !important;
+  text-align: center;
+  /* background-color: #0071db; */
+}
+
+/* 按鈕消失 */
+.splide__arrow {
+  display: none !important;
+}
+
+.splide__list {
+  background-image: url(../img/index/梵谷電影.mp4);
 }
 
 
 
 
 .text {
-  padding-top: 5%;
-  /* padding-left: 3%; */
+  padding: 3% 5% 5% 5%;
   width: 36%;
   text-align: center;
   /* border: #4495E1 solid 1px; */
   min-width: 400px;
 }
-#text1{
+
+#text1 {
   display: block;
 }
-#text2,#text3,#text4,#text5{
+
+#text2,
+#text3,
+#text4,
+#text5 {
   display: none;
 }
+
 .text h1 {
   margin-bottom: 2rem;
   letter-spacing: 0.3rem;
@@ -217,7 +211,7 @@ body {
   font-size: 17px;
   letter-spacing: 0.3rem;
   text-align: justify;
-  line-height: 1.7rem;
+  line-height: 2.2rem;
   margin-bottom: 3rem;
 }
 
@@ -225,12 +219,13 @@ body {
   margin: 1rem;
 }
 
-.bi {
+.bi{
   font-size: 30px;
   color: white;
   background-color: #4495e1;
-  padding: 0px 30px;
-  border-radius: 20px;
+  padding: 2px 40px;
+  border-radius: 50px;
+
 }
 
 .text a:hover .bi {
@@ -287,7 +282,7 @@ body {
   font-weight: bold;
 }
 
-.timebox1 ~ p {
+.timebox1~p {
   margin-top: 2.5rem;
   letter-spacing: 0.2rem;
   font-size: 18px;
@@ -331,7 +326,7 @@ body {
   margin-top: 2rem;
 }
 
-.newsbar > ul {
+.newsbar>ul {
   list-style: none;
   display: inline-flex;
   position: relative;
