--- a/theGameC/views/index.ejs
+++ b/theGameC/views/index.ejs
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- jquery -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.4.js"
-      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-      crossorigin="anonymous"
-    ></script>
-    <script src="/app/jquery.js"></script>
-    <!-- bootstrap5 icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
-    />
-    <!-- css -->
-    <link rel="stylesheet" href="/style/style.css" />
-    <link rel="stylesheet" href="/style/index.css" />
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- slick -->
-    <link rel="stylesheet" href="/kits/slick/slick/slick.css" />
-    <link rel="stylesheet" href="/kits/slick/slick/slick-theme.css" />
-    <!-- fullPage.css -->
-    <link rel="stylesheet" href="/kits/fullpage/fullpage.css" />
-    <link rel="icon" href="/img/header/logoicon.ico" />
-    <title>ThegameC首頁</title>
-  </head>
 
-  <body>
-    <!-- header -->
-    <%- include('share/header')%>
+<head>
+  <meta charset="UTF-8" />
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+    crossorigin="anonymous"></script>
+  <script src="/app/jquery.js"></script>
+  <!-- bootstrap5 icon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css" />
+  <!-- css -->
+  <link rel="stylesheet" href="/style/style.css" />
+  <link rel="stylesheet" href="/style/index.css" />
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- slick -->
+  <link rel="stylesheet" href="/kits/slick/slick/slick.css" />
+  <link rel="stylesheet" href="/kits/slick/slick/slick-theme.css" />
+  <!-- splide -->
+  <script src="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
+"></script>
+  <link href="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
+" rel="stylesheet">
+  <!-- fullPage.css -->
+  <link rel="stylesheet" href="/kits/fullpage/fullpage.css" />
+  <link rel="icon" href="/img/header/logoicon.ico" />
+  <title>ThegameC首頁</title>
+</head>
+
+<body>
+  <!-- header -->
+  <%- include('share/header')%>
 
     <div id="fullpage">
       <div class="section">
         <!-- carousel -->
         <div class="carousel">
           <h1>線上遊戲</h1>
-          <section
-            class="center slider"
-            style="transition: 1s"
-            data-aos="zoom-in"
-          >
+          <section class="center slider" style="transition: 1s" data-aos="zoom-in">
             <div>
               <img src="/img/index/maplestory.jpg" />
               <h1>《新楓之谷》</h1>
@@ -119,21 +117,53 @@
           </div>
           <div class="botm">
             <div class="pic">
-              <div id="picimg1" class="picimgAll">
-                <img src="/img/index/maplestory.jpg" alt="" />
-              </div>
-              <div id="picimg2" class="picimgAll">
-                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
-              </div>
-              <div id="picimg3" class="picimgAll">
-                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
-              </div>
-              <div id="picimg4" class="picimgAll">
-                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
-              </div>
-              <div id="picimg5" class="picimgAll">
-                <!-- <img src="/img/index/maplestory.jpg" alt="" /> -->
-              </div>
+              <section id="main-carousel" class="splide"
+              aria-label="The carousel with thumbnails. Selecting a thumbnail will change the Beautiful Gallery carousel.">
+              <div class="splide__track">
+                  <img class="alpha" src="/img/index/Comp.gif" alt="">
+                  <ul class="splide__list">
+                    <li class="splide__slide">
+                      <img src="/img/index/assassin1.png" alt="">
+                    </li>
+                    <li class="splide__slide">
+                      <img src="/img/index/marksman1.png" alt="">
+                    </li>
+                    <li class="splide__slide">
+                      <img src="/img/index/assassin1.png" alt="">
+                    </li>
+                    <li class="splide__slide">
+                      <img src="/img/index/support1.png" alt="">
+                    </li>
+                    <li class="splide__slide">
+                      <img src="/img/index/marksman1.png" alt="">
+                    </li>
+                    
+                  </ul>
+                </div>
+              </section>
+              <section id="thumbnail-carousel" class="splide"
+                aria-label="The carousel with thumbnails. Selecting a thumbnail will change the Beautiful Gallery carousel.">
+                <div class="splide__track">
+                  <ul class="splide__list">
+                    <li id="picimg1" class="splide__slide border">
+                      <img src="/img/index/LOL.jpg" alt="">
+                    </li>
+                    <li id="picimg2" class="splide__slide border">
+                      <img src="/img/index/LOL.jpg" alt="">
+                    </li>
+                    <li id="picimg3" class="splide__slide border">
+                      <img src="/img/index/LOL.jpg" alt="">
+                    </li>
+                    <li id="picimg4" class="splide__slide border">
+                      <img src="/img/index/LOL.jpg" alt="">
+                    </li>
+                    <li id="picimg5" class="splide__slide border">
+                      <img src="/img/index/LOL.jpg" alt="">
+                    </li>
+                    
+                  </ul>
+                </div>
+              </section>
             </div>
             <div id="text1" class="text">
               <h1>《極地戰壕3》</h1>
@@ -144,8 +174,8 @@
                 免費試玩《極地戰嚎 6》，親自體驗為何《GAME
                 INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
               </p>
-              <a href=""><i class="bi bi-shop"></i></a>
-              <a href=""><i class="bi bi-cart3"></i></a>
+              <a href=""><i class="bi bi-shop-window"></i></a>
+              <a href=""><i class="bi bi-cart2"></i></a>
             </div>
             <div id="text2" class="text">
               <h1>《新楓之谷》</h1>
@@ -156,8 +186,8 @@
                 免費試玩《極地戰嚎 6》，親自體驗為何《GAME
                 INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
               </p>
-              <a href=""><i class="bi bi-shop"></i></a>
-              <a href=""><i class="bi bi-cart3"></i></a>
+              <a href=""><i class="bi bi-shop-window"></i></a>
+              <a href=""><i class="bi bi-cart2"></i></a>
             </div>
             <div id="text3" class="text">
               <h1>《PUBG》</h1>
@@ -168,8 +198,8 @@
                 免費試玩《極地戰嚎 6》，親自體驗為何《GAME
                 INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
               </p>
-              <a href=""><i class="bi bi-shop"></i></a>
-              <a href=""><i class="bi bi-cart3"></i></a>
+              <a href=""><i class="bi bi-shop-window"></i></a>
+              <a href=""><i class="bi bi-cart2"></i></a>
             </div>
             <div id="text4" class="text">
               <h1>《糖豆人》</h1>
@@ -180,8 +210,8 @@
                 免費試玩《極地戰嚎 6》，親自體驗為何《GAME
                 INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
               </p>
-              <a href=""><i class="bi bi-shop"></i></a>
-              <a href=""><i class="bi bi-cart3"></i></a>
+              <a href=""><i class="bi bi-shop-window"></i></a>
+              <a href=""><i class="bi bi-cart2"></i></a>
             </div>
             <div id="text5" class="text">
               <h1>《世紀帝國》</h1>
@@ -192,8 +222,8 @@
                 免費試玩《極地戰嚎 6》，親自體驗為何《GAME
                 INFORMER》刊物會給予「從頭到尾絕無冷場」的評價。購買遊戲本體還可保留你所有的進度。
               </p>
-              <a href=""><i class="bi bi-shop"></i></a>
-              <a href=""><i class="bi bi-cart3"></i></a>
+              <a href=""><i class="bi bi-shop-window"></i></a>
+              <a href=""><i class="bi bi-cart2"></i></a>
             </div>
           </div>
         </div>
@@ -399,11 +429,7 @@
     <script src="/app/index.js"></script>
 
     <!-- slick輪播圖 -->
-    <script
-      src="./kits/slick/slick/slick.js"
-      type="text/javascript"
-      charset="utf-8"
-    ></script>
+    <script src="./kits/slick/slick/slick.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
       $(".center").slick({
         centerMode: true,
@@ -440,5 +466,39 @@
       });
     </script>
     <script src="/js/app.js"></script>
-  </body>
+
+    <!-- splide -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        var main = new Splide('#main-carousel', {
+          type: 'fade',
+          rewind: true,
+          pagination: false,
+          arrows: false,
+        });
+
+
+        var thumbnails = new Splide('#thumbnail-carousel', {
+          fixedWidth: 100,
+          fixedHeight: 60,
+          gap: 10,
+          rewind: true,
+          pagination: false,
+          isNavigation: true,
+          breakpoints: {
+            600: {
+              fixedWidth: 60,
+              fixedHeight: 44,
+            },
+          },
+        });
+
+
+        main.sync(thumbnails);
+        main.mount();
+        thumbnails.mount();
+      });
+    </script>
+</body>
+
 </html>
