--- a/theGameC/views/login.ejs
+++ b/theGameC/views/login.ejs
@@ -44,7 +44,7 @@
 
       <div class="rightbox">
         <div class="loginpage" id="loginpage">
-          <form>
+          <form  action="/login" method="post">
             <div class="loginPagelogo">
               <img src="./img/login/login_logo.png" alt="" />
             </div>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="signbox" id="signbox">
-          <form class="loginbox">
+          <form class="loginbox"  action="/signin" method="post">
             <div class="loginPagelogo">
               <img src="./img/login/login_logo.png" alt="" />
             </div>
@@ -88,14 +88,14 @@
               <div class="signleftbox">
                 <div class="divinput">
                   <i class="bi bi-person"></i>
-                  <input type="text" class="loginu" placeholder="使用者名稱"
+                  <input type="text" class="loginu" name="username" placeholder="使用者名稱"
                     pattern="^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{6,}$" title="不能包含特殊字元" required />
                 </div>
                 <div class="divinput">
                   <div class="lockIcon">
                     <i class="gg-lock"></i>
                   </div>
-                  <input id="password2" type="password" class="loginu" placeholder="請輸入密碼"
+                  <input id="password2" type="password" name="password" class="loginu" placeholder="請輸入密碼"
                     pattern="^(?=.*[a-zA-Z])(?=.*[0-9])[a-zA-Z0-9]{6,}$" title="請輸入至少6碼以上，且不能包含特殊字元" required />
                   <i id="eyeclose2" class="bi-eye-slash"></i>
                   <i id="eyeopen2" class="bi-eye"></i>
@@ -114,16 +114,16 @@
               <div class="signrightbox">
                 <div class="divinput">
                   <i class="bi bi-envelope"></i>
-                  <input type="email" class="loginu" placeholder="電子信箱"
+                  <input type="email" class="loginu" name="email" placeholder="電子信箱"
                     pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="檢查信箱格式是否出錯" required />
                 </div>
                 <div class="divinput">
                   <i class="bi bi-telephone"></i>
-                  <input type="tel" class="loginu" placeholder="電話號碼" pattern="^09\d{2}\d{6}$" title="請輸入09開頭的10碼電話號碼" required />
+                  <input type="tel" class="loginu" name="phone" placeholder="電話號碼" pattern="^09\d{2}\d{6}$" title="請輸入09開頭的10碼電話號碼" required />
                 </div>
                 <div class="divinput">
                   <i class="bi bi-calendar-heart"></i>
-                  <input type="date" class="loginu" placeholder="出生日期" required />
+                  <input type="date" class="loginu" name="birthday" placeholder="出生日期" required />
                 </div>
               </div>
             </div>
