--- a/theGameC/views/login.ejs
+++ b/theGameC/views/login.ejs
@@ -44,7 +44,7 @@
 
       <div class="rightbox">
         <div class="loginpage" id="loginpage">
-          <form  action="/login" method="post">
+          <form action="/login" method="post">
             <div class="loginPagelogo">
               <img src="./img/login/login_logo.png" alt="" />
             </div>
@@ -57,8 +57,8 @@
               <div class="lockIcon">
                 <i class="gg-lock"></i>
               </div>
-              <input id="password1" type="password" class="loginu" name="password" placeholder="Password" title="請確認字母大小寫是否正確"
-                required />
+              <input id="password1" type="password" class="loginu" name="password" placeholder="Password"
+                title="請確認字母大小寫是否正確" required />
               <i id="eyeclose" class="bi-eye-slash"></i>
               <i id="eyeopen" class="bi-eye"></i>
             </div>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="signbox" id="signbox">
-          <form class="loginbox"  action="/signin" method="post">
+          <form class="loginbox" action="/signin" method="post">
             <div class="loginPagelogo">
               <img src="./img/login/login_logo.png" alt="" />
             </div>
@@ -119,7 +119,8 @@
                 </div>
                 <div class="divinput">
                   <i class="bi bi-telephone"></i>
-                  <input type="tel" class="loginu" name="phone" placeholder="電話號碼" pattern="^09\d{2}\d{6}$" title="請輸入09開頭的10碼電話號碼" required />
+                  <input type="tel" class="loginu" name="phone" placeholder="電話號碼" pattern="^09\d{2}\d{6}$"
+                    title="請輸入09開頭的10碼電話號碼" required />
                 </div>
                 <div class="divinput">
                   <i class="bi bi-calendar-heart"></i>
@@ -127,18 +128,42 @@
                 </div>
               </div>
             </div>
-            <input type="submit" class="logins" value="註冊內容" />
+            <input type="submit" class="logins" id="signbut" value="註冊內容" />
             <div class="logobtn">
               <a href="#">Facebook</a>
               <a href="#">Google+</a>
             </div>
+          <input type="text" name="user_id" value="<%=  userLast.user_id %>">
           </form>
         </div>
       </div>
     </div>
     <script src="./app.js"></script>
-    <script src="/app/login.js">
-     
+    <script src="/app/login.js"></script>
+    <script>
+      $(function () {
+        // 信用卡確認紐
+        $("#signbut").on("click", function () {
+          // const userId = $("#user_id").val();
+          $.ajax({
+            url: "/login/signin",
+            type: "POST",
+            data: {
+              user_id: parseInt($("input[name='user_id']").val()) + 1 ,
+              username: $("input[name='username']").val(),
+              password: $("input[id='password2']").val(),
+              email: $("input[name='email']").val(),
+              phone: $("input[name='phone']").val(),
+              birthday: $("input[name='birthday']").val()
+            },
+          }).done(function(){
+            alert("註冊成功");
+          location.reload();
+          })
+          // console.log(data);
+ 
+        });
+      })
     </script>
 </body>
 
