--- a/theGameC/public/style/login.css
+++ b/theGameC/public/style/login.css
@@ -150,6 +150,9 @@ p {
   color: #1C3D5C;
   /* background-color: #0071DB; */
 }
+.gg-lock{
+  color: #1C3D5C;
+}
 
 .lockIcon {
   width: 10%;
@@ -287,10 +290,11 @@ p {
   left: 0px;
   content: '';
   background: rgba(0, 0, 0, 0.85);
+  z-index: 10;
 }
 
 .popup-box {
-  width: 50%;
+  width: 40%;
   padding: 50px 75px;
   transform: translate(-50%, -50%) scale(0.5);
   position: absolute;
@@ -300,24 +304,36 @@ p {
   border-radius: 3px;
   background: #fff;
   text-align: center;
+  display: flex;
 }
 
 
 
 .close-btn {
-  width: 50px;
-  height: 50px;
-  display: inline-block;
+  width: 25px;
+  height: 25px;
+  /* display: flex; */
   position: absolute;
   top: 10px;
   right: 10px;
   border-radius: 100%;
   background: #d75f70;
   font-weight: bold;
-  text-decoration: none;
+
+  /* text-align: center; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* line-height: 20px; */
+}
+.popup-close{
   color: #fff;
-  line-height: 40px;
-  font-size: 32px;
+  font-size: 20px;
+  text-decoration: none;
+  box-sizing: border-box;
+  margin: 0px;
+  position: absolute;
+  bottom: 2px;
+  right: 3px;
 }
 
 .transform-in,
@@ -336,7 +352,12 @@ p {
   -webkit-transform: translate(-50%, -50%) scale(0.8);
   transform: translate(-50%, -50%) scale(0.8);
 }
-
+/* 取消驗證碼數字框的上下加減符號 */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 /* RWD */
 @media screen and (max-width:1300px) {
